parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Statements
Rule 2     Statements -> Statement
Rule 3     Statements -> Statements SEM Statement
Rule 4     Statement -> If
Rule 5     Statement -> While
Rule 6     Statement -> Assignment
Rule 7     Statement -> Read
Rule 8     Statement -> Write
Rule 9     If -> IF BooleanFactor THEN Statements END
Rule 10    If -> IF BooleanFactor THEN Statements ELSE Statements END
Rule 11    Write -> WRITE Expression
Rule 12    Read -> READ Id
Rule 13    While -> WHILE BooleanFactor DO Statements END
Rule 14    Assignment -> Id BEC Expression
Rule 15    BooleanExpression -> BooleanTerm
Rule 16    BooleanExpression -> BooleanTerm OR BooleanExpression
Rule 17    BooleanTerm -> BooleanFactor
Rule 18    BooleanTerm -> BooleanFactor AND BooleanTerm
Rule 19    BooleanFactor -> Comparison
Rule 20    BooleanFactor -> NOT BooleanFactor
Rule 21    Comparison -> Expression Relation Expression
Rule 22    Relation -> EQ
Rule 23    Relation -> NEQ
Rule 24    Relation -> LESS
Rule 25    Relation -> LEQ
Rule 26    Relation -> GRTR
Rule 27    Relation -> GEQ
Rule 28    Expression -> Expression ADD Expression
Rule 29    Expression -> Expression SUB Expression
Rule 30    Expression -> Expression MUL Expression
Rule 31    Expression -> Expression DIV Expression
Rule 32    Expression -> LPAR Expression RPAR
Rule 33    Expression -> NUM
Rule 34    Expression -> Id
Rule 35    Id -> ID

Terminals, with rules where they appear

ADD                  : 28
AND                  : 18
BEC                  : 14
DIV                  : 31
DO                   : 13
ELSE                 : 10
END                  : 9 10 13
EQ                   : 22
GEQ                  : 27
GRTR                 : 26
ID                   : 35
IF                   : 9 10
LEQ                  : 25
LESS                 : 24
LPAR                 : 32
MUL                  : 30
NEQ                  : 23
NOT                  : 20
NUM                  : 33
OR                   : 16
READ                 : 12
RPAR                 : 32
SEM                  : 3
SUB                  : 29
THEN                 : 9 10
WHILE                : 13
WRITE                : 11
error                : 

Nonterminals, with rules where they appear

Assignment           : 6
BooleanExpression    : 16
BooleanFactor        : 9 10 13 17 18 20
BooleanTerm          : 15 16 18
Comparison           : 19
Expression           : 11 14 21 21 28 28 29 29 30 30 31 31 32
Id                   : 12 14 34
If                   : 4
Program              : 0
Read                 : 7
Relation             : 21
Statement            : 2 3
Statements           : 1 3 9 10 10 13
While                : 5
Write                : 8

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Statements
    (2) Statements -> . Statement
    (3) Statements -> . Statements SEM Statement
    (4) Statement -> . If
    (5) Statement -> . While
    (6) Statement -> . Assignment
    (7) Statement -> . Read
    (8) Statement -> . Write
    (9) If -> . IF BooleanFactor THEN Statements END
    (10) If -> . IF BooleanFactor THEN Statements ELSE Statements END
    (13) While -> . WHILE BooleanFactor DO Statements END
    (14) Assignment -> . Id BEC Expression
    (12) Read -> . READ Id
    (11) Write -> . WRITE Expression
    (35) Id -> . ID

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    READ            shift and go to state 12
    WRITE           shift and go to state 13
    ID              shift and go to state 14

    Program                        shift and go to state 1
    Statements                     shift and go to state 2
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    While                          shift and go to state 5
    Assignment                     shift and go to state 6
    Read                           shift and go to state 7
    Write                          shift and go to state 8
    Id                             shift and go to state 11

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Statements .
    (3) Statements -> Statements . SEM Statement

    $end            reduce using rule 1 (Program -> Statements .)
    SEM             shift and go to state 15


state 3

    (2) Statements -> Statement .

    SEM             reduce using rule 2 (Statements -> Statement .)
    $end            reduce using rule 2 (Statements -> Statement .)
    END             reduce using rule 2 (Statements -> Statement .)
    ELSE            reduce using rule 2 (Statements -> Statement .)


state 4

    (4) Statement -> If .

    SEM             reduce using rule 4 (Statement -> If .)
    $end            reduce using rule 4 (Statement -> If .)
    END             reduce using rule 4 (Statement -> If .)
    ELSE            reduce using rule 4 (Statement -> If .)


state 5

    (5) Statement -> While .

    SEM             reduce using rule 5 (Statement -> While .)
    $end            reduce using rule 5 (Statement -> While .)
    END             reduce using rule 5 (Statement -> While .)
    ELSE            reduce using rule 5 (Statement -> While .)


state 6

    (6) Statement -> Assignment .

    SEM             reduce using rule 6 (Statement -> Assignment .)
    $end            reduce using rule 6 (Statement -> Assignment .)
    END             reduce using rule 6 (Statement -> Assignment .)
    ELSE            reduce using rule 6 (Statement -> Assignment .)


state 7

    (7) Statement -> Read .

    SEM             reduce using rule 7 (Statement -> Read .)
    $end            reduce using rule 7 (Statement -> Read .)
    END             reduce using rule 7 (Statement -> Read .)
    ELSE            reduce using rule 7 (Statement -> Read .)


state 8

    (8) Statement -> Write .

    SEM             reduce using rule 8 (Statement -> Write .)
    $end            reduce using rule 8 (Statement -> Write .)
    END             reduce using rule 8 (Statement -> Write .)
    ELSE            reduce using rule 8 (Statement -> Write .)


state 9

    (9) If -> IF . BooleanFactor THEN Statements END
    (10) If -> IF . BooleanFactor THEN Statements ELSE Statements END
    (19) BooleanFactor -> . Comparison
    (20) BooleanFactor -> . NOT BooleanFactor
    (21) Comparison -> . Expression Relation Expression
    (28) Expression -> . Expression ADD Expression
    (29) Expression -> . Expression SUB Expression
    (30) Expression -> . Expression MUL Expression
    (31) Expression -> . Expression DIV Expression
    (32) Expression -> . LPAR Expression RPAR
    (33) Expression -> . NUM
    (34) Expression -> . Id
    (35) Id -> . ID

    NOT             shift and go to state 18
    LPAR            shift and go to state 20
    NUM             shift and go to state 21
    ID              shift and go to state 14

    BooleanFactor                  shift and go to state 16
    Comparison                     shift and go to state 17
    Expression                     shift and go to state 19
    Id                             shift and go to state 22

state 10

    (13) While -> WHILE . BooleanFactor DO Statements END
    (19) BooleanFactor -> . Comparison
    (20) BooleanFactor -> . NOT BooleanFactor
    (21) Comparison -> . Expression Relation Expression
    (28) Expression -> . Expression ADD Expression
    (29) Expression -> . Expression SUB Expression
    (30) Expression -> . Expression MUL Expression
    (31) Expression -> . Expression DIV Expression
    (32) Expression -> . LPAR Expression RPAR
    (33) Expression -> . NUM
    (34) Expression -> . Id
    (35) Id -> . ID

    NOT             shift and go to state 18
    LPAR            shift and go to state 20
    NUM             shift and go to state 21
    ID              shift and go to state 14

    BooleanFactor                  shift and go to state 23
    Comparison                     shift and go to state 17
    Expression                     shift and go to state 19
    Id                             shift and go to state 22

state 11

    (14) Assignment -> Id . BEC Expression

    BEC             shift and go to state 24


state 12

    (12) Read -> READ . Id
    (35) Id -> . ID

    ID              shift and go to state 14

    Id                             shift and go to state 25

state 13

    (11) Write -> WRITE . Expression
    (28) Expression -> . Expression ADD Expression
    (29) Expression -> . Expression SUB Expression
    (30) Expression -> . Expression MUL Expression
    (31) Expression -> . Expression DIV Expression
    (32) Expression -> . LPAR Expression RPAR
    (33) Expression -> . NUM
    (34) Expression -> . Id
    (35) Id -> . ID

    LPAR            shift and go to state 20
    NUM             shift and go to state 21
    ID              shift and go to state 14

    Expression                     shift and go to state 26
    Id                             shift and go to state 22

state 14

    (35) Id -> ID .

    BEC             reduce using rule 35 (Id -> ID .)
    ADD             reduce using rule 35 (Id -> ID .)
    SUB             reduce using rule 35 (Id -> ID .)
    MUL             reduce using rule 35 (Id -> ID .)
    DIV             reduce using rule 35 (Id -> ID .)
    EQ              reduce using rule 35 (Id -> ID .)
    NEQ             reduce using rule 35 (Id -> ID .)
    LESS            reduce using rule 35 (Id -> ID .)
    LEQ             reduce using rule 35 (Id -> ID .)
    GRTR            reduce using rule 35 (Id -> ID .)
    GEQ             reduce using rule 35 (Id -> ID .)
    SEM             reduce using rule 35 (Id -> ID .)
    $end            reduce using rule 35 (Id -> ID .)
    END             reduce using rule 35 (Id -> ID .)
    ELSE            reduce using rule 35 (Id -> ID .)
    RPAR            reduce using rule 35 (Id -> ID .)
    THEN            reduce using rule 35 (Id -> ID .)
    DO              reduce using rule 35 (Id -> ID .)


state 15

    (3) Statements -> Statements SEM . Statement
    (4) Statement -> . If
    (5) Statement -> . While
    (6) Statement -> . Assignment
    (7) Statement -> . Read
    (8) Statement -> . Write
    (9) If -> . IF BooleanFactor THEN Statements END
    (10) If -> . IF BooleanFactor THEN Statements ELSE Statements END
    (13) While -> . WHILE BooleanFactor DO Statements END
    (14) Assignment -> . Id BEC Expression
    (12) Read -> . READ Id
    (11) Write -> . WRITE Expression
    (35) Id -> . ID

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    READ            shift and go to state 12
    WRITE           shift and go to state 13
    ID              shift and go to state 14

    Statement                      shift and go to state 27
    If                             shift and go to state 4
    While                          shift and go to state 5
    Assignment                     shift and go to state 6
    Read                           shift and go to state 7
    Write                          shift and go to state 8
    Id                             shift and go to state 11

state 16

    (9) If -> IF BooleanFactor . THEN Statements END
    (10) If -> IF BooleanFactor . THEN Statements ELSE Statements END

    THEN            shift and go to state 28


state 17

    (19) BooleanFactor -> Comparison .

    THEN            reduce using rule 19 (BooleanFactor -> Comparison .)
    DO              reduce using rule 19 (BooleanFactor -> Comparison .)


state 18

    (20) BooleanFactor -> NOT . BooleanFactor
    (19) BooleanFactor -> . Comparison
    (20) BooleanFactor -> . NOT BooleanFactor
    (21) Comparison -> . Expression Relation Expression
    (28) Expression -> . Expression ADD Expression
    (29) Expression -> . Expression SUB Expression
    (30) Expression -> . Expression MUL Expression
    (31) Expression -> . Expression DIV Expression
    (32) Expression -> . LPAR Expression RPAR
    (33) Expression -> . NUM
    (34) Expression -> . Id
    (35) Id -> . ID

    NOT             shift and go to state 18
    LPAR            shift and go to state 20
    NUM             shift and go to state 21
    ID              shift and go to state 14

    BooleanFactor                  shift and go to state 29
    Comparison                     shift and go to state 17
    Expression                     shift and go to state 19
    Id                             shift and go to state 22

state 19

    (21) Comparison -> Expression . Relation Expression
    (28) Expression -> Expression . ADD Expression
    (29) Expression -> Expression . SUB Expression
    (30) Expression -> Expression . MUL Expression
    (31) Expression -> Expression . DIV Expression
    (22) Relation -> . EQ
    (23) Relation -> . NEQ
    (24) Relation -> . LESS
    (25) Relation -> . LEQ
    (26) Relation -> . GRTR
    (27) Relation -> . GEQ

    ADD             shift and go to state 31
    SUB             shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34
    EQ              shift and go to state 35
    NEQ             shift and go to state 36
    LESS            shift and go to state 37
    LEQ             shift and go to state 38
    GRTR            shift and go to state 39
    GEQ             shift and go to state 40

    Relation                       shift and go to state 30

state 20

    (32) Expression -> LPAR . Expression RPAR
    (28) Expression -> . Expression ADD Expression
    (29) Expression -> . Expression SUB Expression
    (30) Expression -> . Expression MUL Expression
    (31) Expression -> . Expression DIV Expression
    (32) Expression -> . LPAR Expression RPAR
    (33) Expression -> . NUM
    (34) Expression -> . Id
    (35) Id -> . ID

    LPAR            shift and go to state 20
    NUM             shift and go to state 21
    ID              shift and go to state 14

    Expression                     shift and go to state 41
    Id                             shift and go to state 22

state 21

    (33) Expression -> NUM .

    ADD             reduce using rule 33 (Expression -> NUM .)
    SUB             reduce using rule 33 (Expression -> NUM .)
    MUL             reduce using rule 33 (Expression -> NUM .)
    DIV             reduce using rule 33 (Expression -> NUM .)
    EQ              reduce using rule 33 (Expression -> NUM .)
    NEQ             reduce using rule 33 (Expression -> NUM .)
    LESS            reduce using rule 33 (Expression -> NUM .)
    LEQ             reduce using rule 33 (Expression -> NUM .)
    GRTR            reduce using rule 33 (Expression -> NUM .)
    GEQ             reduce using rule 33 (Expression -> NUM .)
    SEM             reduce using rule 33 (Expression -> NUM .)
    $end            reduce using rule 33 (Expression -> NUM .)
    END             reduce using rule 33 (Expression -> NUM .)
    ELSE            reduce using rule 33 (Expression -> NUM .)
    RPAR            reduce using rule 33 (Expression -> NUM .)
    THEN            reduce using rule 33 (Expression -> NUM .)
    DO              reduce using rule 33 (Expression -> NUM .)


state 22

    (34) Expression -> Id .

    ADD             reduce using rule 34 (Expression -> Id .)
    SUB             reduce using rule 34 (Expression -> Id .)
    MUL             reduce using rule 34 (Expression -> Id .)
    DIV             reduce using rule 34 (Expression -> Id .)
    EQ              reduce using rule 34 (Expression -> Id .)
    NEQ             reduce using rule 34 (Expression -> Id .)
    LESS            reduce using rule 34 (Expression -> Id .)
    LEQ             reduce using rule 34 (Expression -> Id .)
    GRTR            reduce using rule 34 (Expression -> Id .)
    GEQ             reduce using rule 34 (Expression -> Id .)
    SEM             reduce using rule 34 (Expression -> Id .)
    $end            reduce using rule 34 (Expression -> Id .)
    END             reduce using rule 34 (Expression -> Id .)
    ELSE            reduce using rule 34 (Expression -> Id .)
    RPAR            reduce using rule 34 (Expression -> Id .)
    THEN            reduce using rule 34 (Expression -> Id .)
    DO              reduce using rule 34 (Expression -> Id .)


state 23

    (13) While -> WHILE BooleanFactor . DO Statements END

    DO              shift and go to state 42


state 24

    (14) Assignment -> Id BEC . Expression
    (28) Expression -> . Expression ADD Expression
    (29) Expression -> . Expression SUB Expression
    (30) Expression -> . Expression MUL Expression
    (31) Expression -> . Expression DIV Expression
    (32) Expression -> . LPAR Expression RPAR
    (33) Expression -> . NUM
    (34) Expression -> . Id
    (35) Id -> . ID

    LPAR            shift and go to state 20
    NUM             shift and go to state 21
    ID              shift and go to state 14

    Id                             shift and go to state 22
    Expression                     shift and go to state 43

state 25

    (12) Read -> READ Id .

    SEM             reduce using rule 12 (Read -> READ Id .)
    $end            reduce using rule 12 (Read -> READ Id .)
    END             reduce using rule 12 (Read -> READ Id .)
    ELSE            reduce using rule 12 (Read -> READ Id .)


state 26

    (11) Write -> WRITE Expression .
    (28) Expression -> Expression . ADD Expression
    (29) Expression -> Expression . SUB Expression
    (30) Expression -> Expression . MUL Expression
    (31) Expression -> Expression . DIV Expression

    SEM             reduce using rule 11 (Write -> WRITE Expression .)
    $end            reduce using rule 11 (Write -> WRITE Expression .)
    END             reduce using rule 11 (Write -> WRITE Expression .)
    ELSE            reduce using rule 11 (Write -> WRITE Expression .)
    ADD             shift and go to state 31
    SUB             shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34


state 27

    (3) Statements -> Statements SEM Statement .

    SEM             reduce using rule 3 (Statements -> Statements SEM Statement .)
    $end            reduce using rule 3 (Statements -> Statements SEM Statement .)
    END             reduce using rule 3 (Statements -> Statements SEM Statement .)
    ELSE            reduce using rule 3 (Statements -> Statements SEM Statement .)


state 28

    (9) If -> IF BooleanFactor THEN . Statements END
    (10) If -> IF BooleanFactor THEN . Statements ELSE Statements END
    (2) Statements -> . Statement
    (3) Statements -> . Statements SEM Statement
    (4) Statement -> . If
    (5) Statement -> . While
    (6) Statement -> . Assignment
    (7) Statement -> . Read
    (8) Statement -> . Write
    (9) If -> . IF BooleanFactor THEN Statements END
    (10) If -> . IF BooleanFactor THEN Statements ELSE Statements END
    (13) While -> . WHILE BooleanFactor DO Statements END
    (14) Assignment -> . Id BEC Expression
    (12) Read -> . READ Id
    (11) Write -> . WRITE Expression
    (35) Id -> . ID

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    READ            shift and go to state 12
    WRITE           shift and go to state 13
    ID              shift and go to state 14

    Statements                     shift and go to state 44
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    While                          shift and go to state 5
    Assignment                     shift and go to state 6
    Read                           shift and go to state 7
    Write                          shift and go to state 8
    Id                             shift and go to state 11

state 29

    (20) BooleanFactor -> NOT BooleanFactor .

    THEN            reduce using rule 20 (BooleanFactor -> NOT BooleanFactor .)
    DO              reduce using rule 20 (BooleanFactor -> NOT BooleanFactor .)


state 30

    (21) Comparison -> Expression Relation . Expression
    (28) Expression -> . Expression ADD Expression
    (29) Expression -> . Expression SUB Expression
    (30) Expression -> . Expression MUL Expression
    (31) Expression -> . Expression DIV Expression
    (32) Expression -> . LPAR Expression RPAR
    (33) Expression -> . NUM
    (34) Expression -> . Id
    (35) Id -> . ID

    LPAR            shift and go to state 20
    NUM             shift and go to state 21
    ID              shift and go to state 14

    Expression                     shift and go to state 45
    Id                             shift and go to state 22

state 31

    (28) Expression -> Expression ADD . Expression
    (28) Expression -> . Expression ADD Expression
    (29) Expression -> . Expression SUB Expression
    (30) Expression -> . Expression MUL Expression
    (31) Expression -> . Expression DIV Expression
    (32) Expression -> . LPAR Expression RPAR
    (33) Expression -> . NUM
    (34) Expression -> . Id
    (35) Id -> . ID

    LPAR            shift and go to state 20
    NUM             shift and go to state 21
    ID              shift and go to state 14

    Expression                     shift and go to state 46
    Id                             shift and go to state 22

state 32

    (29) Expression -> Expression SUB . Expression
    (28) Expression -> . Expression ADD Expression
    (29) Expression -> . Expression SUB Expression
    (30) Expression -> . Expression MUL Expression
    (31) Expression -> . Expression DIV Expression
    (32) Expression -> . LPAR Expression RPAR
    (33) Expression -> . NUM
    (34) Expression -> . Id
    (35) Id -> . ID

    LPAR            shift and go to state 20
    NUM             shift and go to state 21
    ID              shift and go to state 14

    Expression                     shift and go to state 47
    Id                             shift and go to state 22

state 33

    (30) Expression -> Expression MUL . Expression
    (28) Expression -> . Expression ADD Expression
    (29) Expression -> . Expression SUB Expression
    (30) Expression -> . Expression MUL Expression
    (31) Expression -> . Expression DIV Expression
    (32) Expression -> . LPAR Expression RPAR
    (33) Expression -> . NUM
    (34) Expression -> . Id
    (35) Id -> . ID

    LPAR            shift and go to state 20
    NUM             shift and go to state 21
    ID              shift and go to state 14

    Expression                     shift and go to state 48
    Id                             shift and go to state 22

state 34

    (31) Expression -> Expression DIV . Expression
    (28) Expression -> . Expression ADD Expression
    (29) Expression -> . Expression SUB Expression
    (30) Expression -> . Expression MUL Expression
    (31) Expression -> . Expression DIV Expression
    (32) Expression -> . LPAR Expression RPAR
    (33) Expression -> . NUM
    (34) Expression -> . Id
    (35) Id -> . ID

    LPAR            shift and go to state 20
    NUM             shift and go to state 21
    ID              shift and go to state 14

    Expression                     shift and go to state 49
    Id                             shift and go to state 22

state 35

    (22) Relation -> EQ .

    LPAR            reduce using rule 22 (Relation -> EQ .)
    NUM             reduce using rule 22 (Relation -> EQ .)
    ID              reduce using rule 22 (Relation -> EQ .)


state 36

    (23) Relation -> NEQ .

    LPAR            reduce using rule 23 (Relation -> NEQ .)
    NUM             reduce using rule 23 (Relation -> NEQ .)
    ID              reduce using rule 23 (Relation -> NEQ .)


state 37

    (24) Relation -> LESS .

    LPAR            reduce using rule 24 (Relation -> LESS .)
    NUM             reduce using rule 24 (Relation -> LESS .)
    ID              reduce using rule 24 (Relation -> LESS .)


state 38

    (25) Relation -> LEQ .

    LPAR            reduce using rule 25 (Relation -> LEQ .)
    NUM             reduce using rule 25 (Relation -> LEQ .)
    ID              reduce using rule 25 (Relation -> LEQ .)


state 39

    (26) Relation -> GRTR .

    LPAR            reduce using rule 26 (Relation -> GRTR .)
    NUM             reduce using rule 26 (Relation -> GRTR .)
    ID              reduce using rule 26 (Relation -> GRTR .)


state 40

    (27) Relation -> GEQ .

    LPAR            reduce using rule 27 (Relation -> GEQ .)
    NUM             reduce using rule 27 (Relation -> GEQ .)
    ID              reduce using rule 27 (Relation -> GEQ .)


state 41

    (32) Expression -> LPAR Expression . RPAR
    (28) Expression -> Expression . ADD Expression
    (29) Expression -> Expression . SUB Expression
    (30) Expression -> Expression . MUL Expression
    (31) Expression -> Expression . DIV Expression

    RPAR            shift and go to state 50
    ADD             shift and go to state 31
    SUB             shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34


state 42

    (13) While -> WHILE BooleanFactor DO . Statements END
    (2) Statements -> . Statement
    (3) Statements -> . Statements SEM Statement
    (4) Statement -> . If
    (5) Statement -> . While
    (6) Statement -> . Assignment
    (7) Statement -> . Read
    (8) Statement -> . Write
    (9) If -> . IF BooleanFactor THEN Statements END
    (10) If -> . IF BooleanFactor THEN Statements ELSE Statements END
    (13) While -> . WHILE BooleanFactor DO Statements END
    (14) Assignment -> . Id BEC Expression
    (12) Read -> . READ Id
    (11) Write -> . WRITE Expression
    (35) Id -> . ID

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    READ            shift and go to state 12
    WRITE           shift and go to state 13
    ID              shift and go to state 14

    Statements                     shift and go to state 51
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    While                          shift and go to state 5
    Assignment                     shift and go to state 6
    Read                           shift and go to state 7
    Write                          shift and go to state 8
    Id                             shift and go to state 11

state 43

    (14) Assignment -> Id BEC Expression .
    (28) Expression -> Expression . ADD Expression
    (29) Expression -> Expression . SUB Expression
    (30) Expression -> Expression . MUL Expression
    (31) Expression -> Expression . DIV Expression

    SEM             reduce using rule 14 (Assignment -> Id BEC Expression .)
    $end            reduce using rule 14 (Assignment -> Id BEC Expression .)
    END             reduce using rule 14 (Assignment -> Id BEC Expression .)
    ELSE            reduce using rule 14 (Assignment -> Id BEC Expression .)
    ADD             shift and go to state 31
    SUB             shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34


state 44

    (9) If -> IF BooleanFactor THEN Statements . END
    (10) If -> IF BooleanFactor THEN Statements . ELSE Statements END
    (3) Statements -> Statements . SEM Statement

    END             shift and go to state 52
    ELSE            shift and go to state 53
    SEM             shift and go to state 15


state 45

    (21) Comparison -> Expression Relation Expression .
    (28) Expression -> Expression . ADD Expression
    (29) Expression -> Expression . SUB Expression
    (30) Expression -> Expression . MUL Expression
    (31) Expression -> Expression . DIV Expression

    THEN            reduce using rule 21 (Comparison -> Expression Relation Expression .)
    DO              reduce using rule 21 (Comparison -> Expression Relation Expression .)
    ADD             shift and go to state 31
    SUB             shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34


state 46

    (28) Expression -> Expression ADD Expression .
    (28) Expression -> Expression . ADD Expression
    (29) Expression -> Expression . SUB Expression
    (30) Expression -> Expression . MUL Expression
    (31) Expression -> Expression . DIV Expression

    ADD             reduce using rule 28 (Expression -> Expression ADD Expression .)
    SUB             reduce using rule 28 (Expression -> Expression ADD Expression .)
    EQ              reduce using rule 28 (Expression -> Expression ADD Expression .)
    NEQ             reduce using rule 28 (Expression -> Expression ADD Expression .)
    LESS            reduce using rule 28 (Expression -> Expression ADD Expression .)
    LEQ             reduce using rule 28 (Expression -> Expression ADD Expression .)
    GRTR            reduce using rule 28 (Expression -> Expression ADD Expression .)
    GEQ             reduce using rule 28 (Expression -> Expression ADD Expression .)
    SEM             reduce using rule 28 (Expression -> Expression ADD Expression .)
    $end            reduce using rule 28 (Expression -> Expression ADD Expression .)
    END             reduce using rule 28 (Expression -> Expression ADD Expression .)
    ELSE            reduce using rule 28 (Expression -> Expression ADD Expression .)
    RPAR            reduce using rule 28 (Expression -> Expression ADD Expression .)
    THEN            reduce using rule 28 (Expression -> Expression ADD Expression .)
    DO              reduce using rule 28 (Expression -> Expression ADD Expression .)
    MUL             shift and go to state 33
    DIV             shift and go to state 34

  ! MUL             [ reduce using rule 28 (Expression -> Expression ADD Expression .) ]
  ! DIV             [ reduce using rule 28 (Expression -> Expression ADD Expression .) ]
  ! ADD             [ shift and go to state 31 ]
  ! SUB             [ shift and go to state 32 ]


state 47

    (29) Expression -> Expression SUB Expression .
    (28) Expression -> Expression . ADD Expression
    (29) Expression -> Expression . SUB Expression
    (30) Expression -> Expression . MUL Expression
    (31) Expression -> Expression . DIV Expression

    ADD             reduce using rule 29 (Expression -> Expression SUB Expression .)
    SUB             reduce using rule 29 (Expression -> Expression SUB Expression .)
    EQ              reduce using rule 29 (Expression -> Expression SUB Expression .)
    NEQ             reduce using rule 29 (Expression -> Expression SUB Expression .)
    LESS            reduce using rule 29 (Expression -> Expression SUB Expression .)
    LEQ             reduce using rule 29 (Expression -> Expression SUB Expression .)
    GRTR            reduce using rule 29 (Expression -> Expression SUB Expression .)
    GEQ             reduce using rule 29 (Expression -> Expression SUB Expression .)
    SEM             reduce using rule 29 (Expression -> Expression SUB Expression .)
    $end            reduce using rule 29 (Expression -> Expression SUB Expression .)
    END             reduce using rule 29 (Expression -> Expression SUB Expression .)
    ELSE            reduce using rule 29 (Expression -> Expression SUB Expression .)
    RPAR            reduce using rule 29 (Expression -> Expression SUB Expression .)
    THEN            reduce using rule 29 (Expression -> Expression SUB Expression .)
    DO              reduce using rule 29 (Expression -> Expression SUB Expression .)
    MUL             shift and go to state 33
    DIV             shift and go to state 34

  ! MUL             [ reduce using rule 29 (Expression -> Expression SUB Expression .) ]
  ! DIV             [ reduce using rule 29 (Expression -> Expression SUB Expression .) ]
  ! ADD             [ shift and go to state 31 ]
  ! SUB             [ shift and go to state 32 ]


state 48

    (30) Expression -> Expression MUL Expression .
    (28) Expression -> Expression . ADD Expression
    (29) Expression -> Expression . SUB Expression
    (30) Expression -> Expression . MUL Expression
    (31) Expression -> Expression . DIV Expression

    ADD             reduce using rule 30 (Expression -> Expression MUL Expression .)
    SUB             reduce using rule 30 (Expression -> Expression MUL Expression .)
    MUL             reduce using rule 30 (Expression -> Expression MUL Expression .)
    DIV             reduce using rule 30 (Expression -> Expression MUL Expression .)
    EQ              reduce using rule 30 (Expression -> Expression MUL Expression .)
    NEQ             reduce using rule 30 (Expression -> Expression MUL Expression .)
    LESS            reduce using rule 30 (Expression -> Expression MUL Expression .)
    LEQ             reduce using rule 30 (Expression -> Expression MUL Expression .)
    GRTR            reduce using rule 30 (Expression -> Expression MUL Expression .)
    GEQ             reduce using rule 30 (Expression -> Expression MUL Expression .)
    SEM             reduce using rule 30 (Expression -> Expression MUL Expression .)
    $end            reduce using rule 30 (Expression -> Expression MUL Expression .)
    END             reduce using rule 30 (Expression -> Expression MUL Expression .)
    ELSE            reduce using rule 30 (Expression -> Expression MUL Expression .)
    RPAR            reduce using rule 30 (Expression -> Expression MUL Expression .)
    THEN            reduce using rule 30 (Expression -> Expression MUL Expression .)
    DO              reduce using rule 30 (Expression -> Expression MUL Expression .)

  ! ADD             [ shift and go to state 31 ]
  ! SUB             [ shift and go to state 32 ]
  ! MUL             [ shift and go to state 33 ]
  ! DIV             [ shift and go to state 34 ]


state 49

    (31) Expression -> Expression DIV Expression .
    (28) Expression -> Expression . ADD Expression
    (29) Expression -> Expression . SUB Expression
    (30) Expression -> Expression . MUL Expression
    (31) Expression -> Expression . DIV Expression

    ADD             reduce using rule 31 (Expression -> Expression DIV Expression .)
    SUB             reduce using rule 31 (Expression -> Expression DIV Expression .)
    MUL             reduce using rule 31 (Expression -> Expression DIV Expression .)
    DIV             reduce using rule 31 (Expression -> Expression DIV Expression .)
    EQ              reduce using rule 31 (Expression -> Expression DIV Expression .)
    NEQ             reduce using rule 31 (Expression -> Expression DIV Expression .)
    LESS            reduce using rule 31 (Expression -> Expression DIV Expression .)
    LEQ             reduce using rule 31 (Expression -> Expression DIV Expression .)
    GRTR            reduce using rule 31 (Expression -> Expression DIV Expression .)
    GEQ             reduce using rule 31 (Expression -> Expression DIV Expression .)
    SEM             reduce using rule 31 (Expression -> Expression DIV Expression .)
    $end            reduce using rule 31 (Expression -> Expression DIV Expression .)
    END             reduce using rule 31 (Expression -> Expression DIV Expression .)
    ELSE            reduce using rule 31 (Expression -> Expression DIV Expression .)
    RPAR            reduce using rule 31 (Expression -> Expression DIV Expression .)
    THEN            reduce using rule 31 (Expression -> Expression DIV Expression .)
    DO              reduce using rule 31 (Expression -> Expression DIV Expression .)

  ! ADD             [ shift and go to state 31 ]
  ! SUB             [ shift and go to state 32 ]
  ! MUL             [ shift and go to state 33 ]
  ! DIV             [ shift and go to state 34 ]


state 50

    (32) Expression -> LPAR Expression RPAR .

    ADD             reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    SUB             reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    MUL             reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    DIV             reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    EQ              reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    NEQ             reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    LESS            reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    LEQ             reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    GRTR            reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    GEQ             reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    SEM             reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    $end            reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    END             reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    ELSE            reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    RPAR            reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    THEN            reduce using rule 32 (Expression -> LPAR Expression RPAR .)
    DO              reduce using rule 32 (Expression -> LPAR Expression RPAR .)


state 51

    (13) While -> WHILE BooleanFactor DO Statements . END
    (3) Statements -> Statements . SEM Statement

    END             shift and go to state 54
    SEM             shift and go to state 15


state 52

    (9) If -> IF BooleanFactor THEN Statements END .

    SEM             reduce using rule 9 (If -> IF BooleanFactor THEN Statements END .)
    $end            reduce using rule 9 (If -> IF BooleanFactor THEN Statements END .)
    END             reduce using rule 9 (If -> IF BooleanFactor THEN Statements END .)
    ELSE            reduce using rule 9 (If -> IF BooleanFactor THEN Statements END .)


state 53
